# milc

./: .editorconfig  .flake8  .gitchangelog.rc  .gitignore  AGENTS.md  BREAKING_CHANGES.md  CHANGELOG.rst  CODESTYLE.md  COMPARISONS.md  README.md  TODO  ci_tests  clim.py  color  config_source  config_source.config  custom_logger  env_prefix_example  env_prefix_noprefix_example  env_prefix_subcommand_example  example  generate_docs  hello  index.html  milc-color  milc.py  mkdocs.yml  nested_example  nose2.cfg  passwd_complexity  passwd_confirm  prerun_example  pyproject.toml  qmk  questions  release  release_docs  requirements-dev.txt  requirements-release.txt  requirements.txt  (+7 more)
.github/workflows/: ci.yml  codeql-analysis.yml  devel_docs.yml  docs-check.yml  python-publish.yml  pythonapp.yml  stale.yml
1.10/: 404.html  index.html  sitemap.xml
1.10/ANSI/: index.html
1.10/api__in_argv/: index.html
1.10/api__sparkline/: index.html
1.10/api_ansi/: index.html
1.10/api_attrdict/: index.html
1.10/api_configuration/: index.html
1.10/api_emoji/: index.html
1.10/api_milc/: index.html
1.10/api_milc_interface/: index.html
1.10/api_questions/: index.html
1.10/api_subcommand_config/: index.html
1.10/argcomplete/: index.html
1.10/argument_parsing/: index.html
1.10/breaking_changes/: index.html
1.10/configuration/: index.html
1.10/installation/: index.html
1.10/logging/: index.html
1.10/metadata/: index.html
1.10/search/: search_index.json
1.10/sparklines/: index.html
1.10/spinners/: index.html
1.10/subcommand_config/: index.html
1.10/subprocesses/: index.html
1.10/threading/: index.html
1.10/tutorial/: index.html
1.11/: 404.html  index.html  sitemap.xml
1.11/ANSI/: index.html
1.11/api__in_argv/: index.html
1.11/api__sparkline/: index.html
1.11/api_ansi/: index.html
1.11/api_attrdict/: index.html
1.11/api_configuration/: index.html
1.11/api_emoji/: index.html
1.11/api_milc/: index.html
1.11/api_milc_interface/: index.html
1.11/api_questions/: index.html
1.11/api_subcommand_config/: index.html
1.11/argcomplete/: index.html
1.11/argument_parsing/: index.html
1.11/breaking_changes/: index.html
1.11/configuration/: index.html
1.11/installation/: index.html
1.11/logging/: index.html
1.11/metadata/: index.html
1.11/search/: search_index.json
1.11/sparklines/: index.html
1.11/spinners/: index.html
1.11/subcommand_config/: index.html
1.11/subprocesses/: index.html
1.11/threading/: index.html
1.11/tutorial/: index.html
1.5/: ANSI.md  api_ansi.md  api_attrdict.md  api_configuration.md  api_questions.md  index.html  installation.md  logging.md  metadata.md  spinners.md
1.5.0/: api_milc.md  api_subcommand_config.md  index.html  subprocesses.md  threading.md
1.6/: 404.html  index.html  sitemap.xml
1.6/ANSI/: index.html
1.6/api__in_argv/: index.html
1.7/: 404.html  index.html  sitemap.xml
1.8/: 404.html  index.html  sitemap.xml
1.9/: 404.html  index.html  sitemap.xml
2.0/: 404.html  index.html  sitemap.xml
devel/: 404.html  CNAME  index.html  sitemap.xml
docs/: ANSI.md  README.md  _summary.md  api__in_argv.md  api__sparkline.md  api_ansi.md  api_attrdict.md  api_configuration.md  api_emoji.md  api_milc.md  api_milc_interface.md  api_questions.md  api_sparkline.md  api_subcommand_config.md  argcomplete.md  argument_parsing.md  breaking_changes.md  configuration.md  environment_variables.md  getting_started.md  index.html  installation.md  logging.md  metadata.md  questions.md  sparklines.md  subcommand_config.md  subcommands.md  subprocesses.md  threading.md  tutorial.md
latest/: _summary.md  argcomplete.md  argument_parsing.md  breaking_changes.md  configuration.md  index.html  tutorial.md
milc/: __init__.py  _in_argv.py  _sparkline.py  ansi.py  attrdict.py  configuration.py  emoji.py  milc.py  milc_interface.py  questions.py  sparkline.py
tests/: common.py  test___init__.py  test_ansi.py  test_attrdict.py  test_configuration.py  test_configuration_Configuration.py  test_questions.py  test_script_config_source.py  test_script_custom_logger.py  test_script_env_prefix.py  test_script_example.py  test_script_hello.py  test_script_nested_example.py  test_script_password.py  test_script_prerun.py  test_script_questions.py  test_script_sparkline.py  test_sparkline.py
(+163 files in other folders)
