[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milc"
version = "1.10.0"
description = "Opinionated Batteries-Included Python 3 CLI Framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "skullydazed", email = "skullydazed@gmail.com" }]
maintainers = [{ name = "skullydazed", email = "skullydazed@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "argcomplete",
    "colorama",
    "halo",
    "platformdirs",
    "spinners",
    "types-colorama",
    "typing_extensions",
]

[project.urls]
Homepage = "https://milc.clueboard.co/"

[dependency-groups]
dev = [
    "hjson",
    "mike",
    "mkdocs-git-revision-date-plugin",
    "mkdocs-material<9",
    "ty",
    "pytest",
    "pygments<2.20; python_version < '3.9'",
    "pygments>=2.20; python_version >= '3.9'",
    "ruff",
    "semver",
    "yapf",
]
release = [
    {include-group = "dev"},
    "build",
    "bumpversion",
    "gitchangelog",
    "pydoc-markdown",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
script-files = ["milc-color"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
milc = ["py.typed"]

[tool.ruff]
line-length = 200
exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "C90"]
ignore = ["E226", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["N802", "N999"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.yapf]
align_closing_bracket_with_visual_indent = true
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_default_or_named_assigns = true
allow_split_before_dict_value = true
arithmetic_precedence_indication = true
blank_lines_around_top_level_definition = 2
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
coalesce_brackets = true
column_limit = 512
continuation_align_style = "SPACE"
continuation_indent_width = 4
dedent_closing_brackets = true
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
i18n_comment = ""
i18n_function_call = ""
indent_blank_lines = false
indent_dictionary_value = true
indent_width = 4
join_multiple_lines = false
no_spaces_around_selected_binary_operators = ""
spaces_around_default_or_named_assign = false
spaces_around_power_operator = false
spaces_before_comment = 2
space_between_ending_comma_and_closing_bracket = false
split_all_comma_separated_values = false
split_arguments_when_comma_terminated = true
split_before_arithmetic_operator = false
split_before_bitwise_operator = true
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = false
split_before_expression_after_opening_paren = false
split_before_first_argument = false
split_before_logical_operator = false
split_before_named_assigns = true
split_complex_comprehension = true
split_penalty_after_opening_bracket = 300
split_penalty_after_unary_operator = 10000
split_penalty_arithmetic_operator = 300
split_penalty_before_if_expr = 0
split_penalty_bitwise_operator = 300
split_penalty_comprehension = 80
split_penalty_excess_character = 7000
split_penalty_for_added_line_split = 30
split_penalty_import_names = 0
split_penalty_logical_operator = 300
use_tabs = false

